# rusty-html

./: .gitignore  Cargo.toml  readme.md
examples/: main.rs  nested.rs  simple.rs  template.rs  test.rs
examples/templates/: Nested.html  SimpleLink.html
examples/web/: Cargo.toml  index.html
examples/web/src/: lib.rs
frontend/: Cargo.toml
macros/: Cargo.toml
macros/src/: build.rs  helper_macros.rs  inline_html.rs  lib.rs  parser.rs
macros/src/grammar/: mod.rs  rules.pest
macros/src/template/: arguments.rs  mod.rs
rusty-html-derive/: Cargo.toml
rusty-html-derive/src/: lib.rs  parser.rs
rusty-html-traits/: Cargo.toml
rusty-html-traits/src/: lib.rs
src/: lib.rs  traits.rs
src/render/: mod.rs  textual_types.rs
src/render/impls/: basic_types.rs  mod.rs  refs_and_others.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/: argument_parsing.rs  inline_html.rs
tests/templates/: SimpleButton.html
web/: Cargo.toml
