[workspace]
members = ["macros", "web", "examples/web"]

[package]
name = "rusty-html"
version = "0.1.2"
edition = "2021"
authors = ["Michael van Straten"]
description = "Rusty HTML is a html-templating/web framework"
repository = "https://github.com/michaelvanstraten/rusty-html"
license = "MIT"

[features]
inline-html = ["rusty-html-macros/inline-html"]
web = []

[dependencies]
rusty-html-macros = { path = "macros" }
