[package]
name = "rusty-html-macros"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Straten"]
description = "This crate belongs to the rusty-html crate and implements the macros for set crate"
repository = "https://github.com/michaelvanstraten/rusty-html"
license = "MIT"

[dependencies]
pest = "2.4.0"
pest_derive = "2.4.0"

proc-macro2 = "1.0.34"
syn = { version = "1.0.102", features = ["full"] }
quote = "1.0.21"

[lib]
proc-macro = true

[features]
default = ["inline-html", "better-errors"]
inline-html = []
better-errors = []

