[package]
name = "rusty-html-web-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
rusty-html = { path = "../../" }
tokio = { version = "1.24.1", features = ["sync"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'Window',
    "Performance",
    "PerformanceTiming",
]
